--- a/KernelUpgrade_and_reboot.yml
+++ b/KernelUpgrade_and_reboot.yml
@@ -2,7 +2,7 @@
 - tasks:
    - name: Install kernel version 2.6.32-754.23.1.el6.x86_64
      yum:
-       name: kernel*
+       name: "*"
        state: latest
 #       disable_excludes: all
    - name: Rebooting...
